Fixed overflow bug on Checkout dropdown especially on tilted devices

--- a/src/components/views/Customer/CustomerMenu/style/Menu.scss
+++ b/src/components/views/Customer/CustomerMenu/style/Menu.scss
@@ -6,7 +6,7 @@
     .InnerContainer {
         display: flex;
         flex-flow: column;
-        height: 100vh;
+        min-height: 100vh;
         padding: 30px;
         .HeaderCheckoutContainer {
             display: flex;
@@ -26,7 +26,7 @@
     }
     .CheckoutDropdown {
         background-color: GetColorTheme(MainContrast);
-        height: 95vh;
+        min-height: 95vh;
         max-width: 85%;
         min-width: 70%;
         z-index: 1;
@@ -46,7 +46,7 @@
             padding: 10px;
             .CheckoutList {
                 max-height: 70%;
-                min-height: 350px;
+                min-height: 50%;
                 width: 90%;
                 margin: auto;
                 overflow-y: auto;
